content alignment fixed

--- a/src/components/index/css/content.module.css
+++ b/src/components/index/css/content.module.css
@@ -1,16 +1,17 @@
 .content {
-  padding: 100px 0; 
-  position: relative; 
+  padding: 100px 0;
+  position: relative;
   width: 100%;
-  font-family: 'Work Sans', sans-serif;
+  font-family: "Work Sans", sans-serif;
   min-height: 35vh;
-  flex-flow: column; 
+  flex-flow: column;
 }
 
-.content p, .content h3 {
+.content p,
+.content h3 {
   text-align: center;
-  max-width: 50vw;
   margin: 0 auto;
+  max-width: 90%;
 }
 
 .content:last-child {
@@ -25,4 +26,10 @@
 .statement {
   padding-bottom: 100px;
 }
- 
+
+@media (min-width: 750px) {
+  .content p,
+  .content h3 { 
+    max-width: 55%;
+  }
+}
